# set-Calc

./: .clang-format  .clangd  .gitignore  CMakeLists.txt
headers/: getModeNumber  initVecArray  numMath  setControl
src/: getModeNumber.cpp  initVecArray.cpp  main.cpp  numMath.cpp  setControl.cpp
